welcome.lessons.welcome.array.basics.Array1.scala.error
withoutDoubles:7: error: ';' expected but 'else' found.
  	else(return die2 + die1)
        ^