welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var x:Int = getMondeHauteur()
  var T:Array[Color](x+1)
  for(i<- 0 to T.length-1){
    T(i)=getCouleurSol()
    avance()
  }
  T(x)=T(0)
  for(j<- 0 to T.length-1){
    setCouleurBrosse(T(j+1))
    baisseBrosse()
    leveBrosse()
    avance()
  }
}